* Sep 11 2001 hship

framework:
- Add IRenderDescription interface, make some key classes implement it
- Change RequestContext to notice and use the IRenderDescription interface when displaying
  classes
- Bump the framework version up to 1.0.6

* Sep 10 2001 hship

doc:
- Fix minor errors in Developer's Guide

framework:
- Fix error in IntegerField.jwc
- Fix some incorrect JavaDoc comments
- Create method ApplicationServlet.doService, which will make it easier
  to analyze performance
  
contrib:
- Fix error in MultiplePropertySelection (was using IPropertySelectionRenderer
  not IMultiplePropertySelectionRenderer).

vlib:
- Add icons, CSS styles and support for info and warning messages

tutorial, vlib, wap:
- Fix DTD in web.xml (2.2 not 1.2)


[ #460383 ] web.xml DTD wrong
[ #460384 ] MultiPropertySelection render binding
[ #460387 ] IntegerField.jwc wrong

* Sep 4 2001 hship

Release 1.0.5

* Sep 4 2001 hship

- Updated to Jetty 3.1RC9

doc:
- Add description of <include-script> element in Tapestry Script
- Update the Inspector images in the Developer's Guide and Tutorial
- Mention JBoss 2.4.0

vlibbeans:
- Modify config files for JBoss 2.4.0

web:
- Improve navigation

* Sep 4 2001 hship

framework:
- More tweaking to ShowInspector scripts (Netscape 4 and 6 work, but have trouble with scrollbars)
- Reinstate ILifecycle.java with temporary "bridging" code to the new page event model (in AbstractComponent)

contrib:
- Get sorting working in NN4 and NN6

* Sep 3 2001 hship

framework:
- Add Body.includeScript()
- Add PracticalBrowserSniffer.js
- Simplify image preloading in Body component
- Add Body.process(ScriptSession)
- Add the <include-script> element to the Tapestry Script DTD
- Add IncludedScript token type
- First, broken, attempt to get ShowInspector component to work with Navigator 6

contrib:
- Split Palette.script into two pieces, moving the static functions
  into PaletteFunctions.js.
- Kludge partial support for using Palette with Navigator 6
  